# arc-chain

./: .dockerignore  .gitignore  ARC_Chain_Benchmark_Results.html  BENCHMARK_RESULTS.md  Cargo.toml  Dockerfile.node  GAP_TRACKER.md  LICENSE  Makefile  README.md  SESSION-2026-03-22.md  SPEC.md  STATUS.md  benchmark-multinode-results-m2ultra.json  benchmark-multinode-results.json  benchmark_report.typ  config.toml  deploy.sh  docker-compose.testnet.yml  docker-compose.yml  foundry.toml  generate_pdf.py  genesis.toml  testnet-seeds.txt
.claude/: launch.json  settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
agents/: Cargo.toml  README.md
agents/src/: oracle_agent.rs  router_agent.rs  sentiment_agent.rs
arc-data/: known_peers.json  state.wal
contracts/: ARCStaking.sol  ArcBridge.sol  ArcStateRoot.sol  TaxSplitter.sol
crates/arc-bench/: Cargo.toml
crates/arc-bench/src/: cached_integer_bench.rs  dashboard.html  gguf_bench.rs  gguf_integer_bench.rs  gpu_state_bench.rs  gpu_state_bench_main.rs  inference_bench.rs  integer_bench.rs  main.rs  mixed_bench.rs  multinode_bench.rs  node_bench.rs  parallel_bench.rs  production_bench.rs  propose_verify_bench.rs  signed_bench.rs  soak_bench.rs
crates/arc-channel/: Cargo.toml
crates/arc-channel/src/: lib.rs
crates/arc-cli/: Cargo.toml
crates/arc-cli/src/: keygen.rs  main.rs  rpc.rs
crates/arc-cli/src/commands/: balance.rs  block.rs  faucet.rs  info.rs  mod.rs  transfer.rs  tx.rs
crates/arc-consensus/: Cargo.toml
crates/arc-consensus/src/: beacon.rs  data_availability.rs  formal_proofs.rs  lib.rs  security.rs  subnet.rs
crates/arc-crypto/: Cargo.toml
crates/arc-crypto/benches/: crypto_bench.rs
crates/arc-crypto/examples/: generate_proofs.rs  prove_7b_layers.rs
crates/arc-crypto/src/: batch_prover.rs  blake3_commit.rs  bls.rs  circuits.rs  hash.rs  inference_proof.rs  lib.rs  merkle.rs  pedersen.rs  poseidon.rs  proof_compress.rs  signature.rs  stark.rs  stwo_air.rs  threshold.rs  vrf.rs  zk_aggregate.rs  zk_rollup.rs
crates/arc-gpu/: Cargo.toml
crates/arc-gpu/examples/: derive_key.rs
crates/arc-gpu/src/: avx512_verify.rs  blake3.wgsl  cuda_verify.rs  ed25519_verify.cu  ed25519_verify.metal  ed25519_verify.wgsl  fused_kernels.metal  gpu_forward.rs  gpu_matmul.rs  gpu_memory.rs  hardware_detect.rs  lib.rs  matmul.metal  matmul.wgsl  matmul_diag.metal  metal_icb.rs  metal_verify.rs  neon_verify.rs  transformer.wgsl
crates/arc-inference/: Cargo.toml
crates/arc-inference/examples/: bench_gpu_forward.rs  bench_int8.rs  bench_q4_gpu.rs  check_weights.rs  cross_platform_7b.rs  debug_7b.rs  debug_forward.rs  debug_generation.rs  eval_perplexity.rs  profile_gpu.rs  profile_int8.rs  test_candle.rs  test_q4_7b.rs  trace_layers.rs
crates/arc-inference/src/: cached_integer_model.rs  candle_backend.rs  committee.rs  gas.rs  gguf_integer.rs  integer_engine.rs  integer_lut.rs  lib.rs  q4_engine.rs
crates/arc-mempool/: Cargo.toml
crates/arc-mempool/src/: lib.rs
crates/arc-net/: Cargo.toml
crates/arc-net/src/: lib.rs  protocol.rs  transport.rs
crates/arc-node/: Cargo.toml
crates/arc-node/src/: benchmark.rs  block_stm.rs  coalesce.rs  config.rs  consensus.rs  lib.rs  main.rs  pipeline.rs  producer.rs  rpc.rs  state_sync.rs  vrf.rs
crates/arc-node/tests/: multi_node.rs
crates/arc-olm/: Cargo.toml
crates/arc-olm/src/: lib.rs  main.rs
crates/arc-olm/src/ontology/: mod.rs
crates/arc-olm/src/primitives/: compose.rs  grid.rs  mod.rs  object.rs
crates/arc-olm/src/search/: augmentation.rs  beam.rs  diff_synth.rs  enumerate.rs  eval.rs  evolution.rs  llm_engine.rs  mod.rs  solver.rs  steering.rs  synthesizer.rs
crates/arc-state/: Cargo.toml
crates/arc-state/src/: block_stm.rs  gpu_state.rs  io_backend.rs  jmt_store.rs  lib.rs  light_client.rs  mmap_state.rs  simd_parse.rs  wal.rs
crates/arc-types/: Cargo.toml
crates/arc-types/src/: account.rs  account_abstraction.rs  ai_native.rs  block.rs  bridge.rs  defi.rs  devtools.rs  docs.rs  economics.rs  governance.rs  identity.rs  indexer.rs  intent.rs  lib.rs  multisig.rs  proof_market.rs  sdk.rs  session_keys.rs  social_recovery.rs  transaction.rs  wallet.rs
crates/arc-vm/: Cargo.toml
crates/arc-vm/src/: agent.rs  evm.rs  formal_verify.rs  inference.rs  inference_verify.rs  lib.rs  oracle.rs  precompiles.rs  security_tests.rs  test_framework.rs  zk_precompile.rs
dashboard/: index.html
deploy/: Makefile  README.md  arc-node.service  cloud-init.yml  monitor.sh  nginx.conf  setup-testnet.sh  teardown.sh
desktop/: README.md  build.sh  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
docs/: README.md  architecture.md  benchmarking.md  quickstart.md  rpc-api.md  running-testnet.md  sdk-python.md  sdk-typescript.md  smart-contracts.md
docs-site/: docusaurus.config.ts  sidebars.ts
explorer/: .dockerignore  .env.production  Dockerfile  ONE-SHOT-PROMPT.md  index-live.html  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vercel.json  vite.config.ts
faucet/: Cargo.toml
logs/: aggregate_20260301_175032.csv  aggregate_20260301_175244.csv  aggregate_20260301_175555.csv  aggregate_20260301_175714.csv  aggregate_20260301_180045.csv  soak_report_20260301_175032.txt  soak_report_20260301_175141.txt  soak_report_20260301_175244.txt  soak_report_20260301_175517.txt  soak_report_20260301_175555.txt  soak_report_20260301_175714.txt  soak_report_20260301_180045.txt
output/: arc-brand-data.json  arc-brand-fulltext.txt
papers/: arc-whitepaper.typ  deterministic-inference.typ  foundations-trustworthy-ai.typ  references.bib  three-tier-ai-verification.tex  vrf-inference-committees.tex
relayer/: Cargo.toml  README.md
relayer/src/: arc_submitter.rs  config.rs  eth_watcher.rs  main.rs
scripts/: arc-compile.sh  arc-node.service  ci_check.sh  com.arc-chain.node.plist  create-testnet.sh  create_model.py  deploy-explorer.sh  deploy-testnet.sh  install-inference-node.sh  install-node.sh  join-inference.sh  join-testnet.sh  load-test.sh  monitor-testnet.sh  paper-benchmark.py  (+12 more)
(+129 files in other folders)
