[workspace]
resolver = "2"
members = [
    "crates/arc-crypto",
    "crates/arc-types",
    "crates/arc-state",
    "crates/arc-vm",
    "crates/arc-mempool",
    "crates/arc-node",
    "crates/arc-gpu",
    "crates/arc-bench",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "BUSL-1.1"
authors = ["ARC Chain Contributors"]
repository = "https://github.com/arc-chain/arc"

[workspace.dependencies]
# Crypto
blake3 = { version = "1.5", features = ["rayon"] }
curve25519-dalek = { version = "4.1", features = ["digest", "rand_core"] }
sha2 = "0.10"
rand = "0.8"
rand_core = "0.6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Async / networking
tokio = { version = "1.0", features = ["full"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }

# WASM runtime
wasmer = "6.0"

# GPU compute
wgpu = "24.0"

# Parallelism
rayon = "1.10"
crossbeam = "0.8"
dashmap = "6.1"

# Logging / errors
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2.0"
anyhow = "1.0"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Misc
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
parking_lot = "0.12"
bytes = "1.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
inherits = "release"
debug = true
