[workspace]
resolver = "2"
members = [
    "crates/arc-crypto",
    "crates/arc-types",
    "crates/arc-state",
    "crates/arc-vm",
    "crates/arc-mempool",
    "crates/arc-node",
    "crates/arc-gpu",
    "crates/arc-bench",
    "crates/arc-consensus",
    "crates/arc-net",
    "crates/arc-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "BUSL-1.1"
authors = ["ARC Chain Contributors"]
repository = "https://github.com/arc-chain/arc"

[workspace.dependencies]
# Crypto
blake3 = { version = "1.5", features = ["rayon"] }
curve25519-dalek = { version = "4.1", features = ["digest", "rand_core"] }
ed25519-dalek = { version = "2.1", features = ["batch", "rand_core"] }
k256 = { version = "0.13", features = ["ecdsa"] }
fips204 = "0.4"
pqcrypto-falcon = { version = "0.4", features = ["std"] }
pqcrypto-traits = "0.3"
sha2 = "0.10"
sha3 = "0.10"
blst = { version = "0.3", features = ["portable"] }
# STARK prover (Stwo — StarkWare's Circle STARK)
stwo = { git = "https://github.com/starkware-libs/stwo.git", default-features = false, features = ["prover"] }
stwo-constraint-framework = { git = "https://github.com/starkware-libs/stwo.git", default-features = false, features = ["prover"] }
# GPU acceleration (ICICLE — Ingonyama's GPU library for M31 field ops)
icicle-runtime = { git = "https://github.com/ingonyama-zk/icicle.git", tag = "v3.4.0" }
icicle-core = { git = "https://github.com/ingonyama-zk/icicle.git", tag = "v3.4.0" }
icicle-m31 = { git = "https://github.com/ingonyama-zk/icicle.git", tag = "v3.4.0" }
icicle-hash = { git = "https://github.com/ingonyama-zk/icicle.git", tag = "v3.4.0" }
num-traits = "0.2"
rand = "0.8"
rand_core = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Async / networking
tokio = { version = "1.0", features = ["full"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
quinn = "0.11"
rcgen = "0.13"
rustls = { version = "0.23", features = ["ring"] }

# WASM runtime
wasmer = "6.0"

# EVM runtime
revm = { version = "19", default-features = false, features = ["std"] }

# GPU compute
wgpu = "25.0"

# Parallelism
rayon = "1.10"
crossbeam = "0.8"
dashmap = "6.1"

# Persistence
crc32fast = "1.4"
lz4_flex = "0.11"

# Logging / errors
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2.0"
anyhow = "1.0"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Config
toml = "0.8"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Misc
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
parking_lot = "0.12"
bytes = "1.0"
clap = { version = "4.5", features = ["derive"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
inherits = "release"
debug = true
