[package]
name = "arc-relayer"
description = "Bridge relayer service connecting Ethereum and ARC Chain"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "arc-relayer"
path = "src/main.rs"

[dependencies]
arc-types = { path = "../crates/arc-types" }
reqwest.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
ed25519-dalek.workspace = true
blake3.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
clap.workspace = true
chrono.workspace = true
toml.workspace = true
