[package]
name = "arc-bench"
description = "ARC Chain benchmark suite — real transaction throughput measurement"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "arc-bench"
path = "src/main.rs"

[dependencies]
arc-crypto = { path = "../arc-crypto" }
arc-types = { path = "../arc-types" }
arc-state = { path = "../arc-state" }
arc-vm = { path = "../arc-vm" }
arc-mempool = { path = "../arc-mempool" }
arc-gpu = { path = "../arc-gpu" }
blake3.workspace = true
rayon.workspace = true
bincode.workspace = true
rand.workspace = true
chrono.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
