[package]
name = "arc-bench"
description = "ARC Chain benchmark suite — real transaction throughput measurement"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "arc-bench"
path = "src/main.rs"

[[bin]]
name = "arc-bench-node"
path = "src/node_bench.rs"

[[bin]]
name = "arc-bench-signed"
path = "src/signed_bench.rs"

[[bin]]
name = "arc-bench-production"
path = "src/production_bench.rs"

[[bin]]
name = "arc-bench-mixed"
path = "src/mixed_bench.rs"

[[bin]]
name = "arc-bench-parallel"
path = "src/parallel_bench.rs"

[[bin]]
name = "arc-bench-soak"
path = "src/soak_bench.rs"

[[bin]]
name = "arc-bench-propose-verify"
path = "src/propose_verify_bench.rs"

[[bin]]
name = "arc-bench-multinode"
path = "src/multinode_bench.rs"

[[bin]]
name = "arc-bench-gpu-state"
path = "src/gpu_state_bench_main.rs"

[[bin]]
name = "arc-bench-inference"
path = "src/inference_bench.rs"

[[bin]]
name = "arc-bench-gguf"
path = "src/gguf_bench.rs"

[[bin]]
name = "arc-bench-integer"
path = "src/integer_bench.rs"

[features]
candle = ["arc-inference/candle"]

[dependencies]
arc-inference = { path = "../arc-inference" }
arc-crypto = { path = "../arc-crypto" }
arc-types = { path = "../arc-types" }
arc-state = { path = "../arc-state" }
arc-vm = { path = "../arc-vm" }
arc-mempool = { path = "../arc-mempool" }
arc-gpu = { path = "../arc-gpu" }
arc-node = { path = "../arc-node" }
arc-consensus = { path = "../arc-consensus" }
arc-net = { path = "../arc-net" }
crossbeam = { workspace = true }
blake3.workspace = true
rayon.workspace = true
bincode.workspace = true
rand.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
axum = { workspace = true, features = ["ws"] }
reqwest = { version = "0.12", features = ["json"] }
hostname = "0.4"
uuid.workspace = true
clap.workspace = true
ed25519-dalek.workspace = true
fips204.workspace = true
libc = "0.2"
