[package]
name = "arc-consensus"
description = "ARC Chain DAG-based consensus — Mysticeti-inspired, sender-sharded"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
arc-crypto = { path = "../arc-crypto" }
arc-types = { path = "../arc-types" }
serde.workspace = true
bincode.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
rayon.workspace = true
crossbeam.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
rand.workspace = true
blake3.workspace = true
