[package]
name = "arc-net"
description = "ARC Chain networking — QUIC transport, shred propagation, tx gossip"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
arc-crypto = { path = "../arc-crypto" }
arc-types = { path = "../arc-types" }
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
tokio.workspace = true
quinn.workspace = true
dashmap.workspace = true
crossbeam.workspace = true
tracing.workspace = true
thiserror.workspace = true
bytes.workspace = true
rand.workspace = true
blake3.workspace = true
