[package]
name = "arc-node"
description = "ARC Chain node — block production, RPC server, DAG consensus"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "arc-node"
path = "src/main.rs"

# To enable real Stwo Circle-STARK proofs (requires nightly Rust):
#   cargo +nightly build -p arc-node --features stwo-prover
[features]
default = []
stwo-prover = ["arc-crypto/stwo-prover"]

[dependencies]
arc-crypto = { path = "../arc-crypto" }
arc-types = { path = "../arc-types" }
arc-state = { path = "../arc-state" }
arc-vm = { path = "../arc-vm" }
arc-mempool = { path = "../arc-mempool" }
arc-gpu = { path = "../arc-gpu" }
arc-consensus = { path = "../arc-consensus" }
arc-net = { path = "../arc-net" }
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
hex.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
chrono.workspace = true
uuid.workspace = true
parking_lot.workspace = true
dashmap.workspace = true
clap.workspace = true
crossbeam.workspace = true
blake3.workspace = true
ed25519-dalek.workspace = true
k256.workspace = true
sha3.workspace = true
rayon.workspace = true
lz4_flex.workspace = true
reqwest.workspace = true
thiserror.workspace = true
toml.workspace = true
