[package]
name = "arc-node"
description = "ARC Chain node — block production, RPC server, DAG consensus"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "arc-node"
path = "src/main.rs"

# Real Stwo Circle-STARK proofs enabled automatically in production (nightly).
# Dev builds on stable use mock BLAKE3 verifier — proofs are structurally identical.
[features]
default = []
candle = ["arc-inference/candle"]
stwo-prover = ["arc-crypto/stwo-prover", "arc-state/stwo-prover"]

[dependencies]
arc-crypto = { path = "../arc-crypto" }
arc-types = { path = "../arc-types" }
arc-state = { path = "../arc-state" }
arc-vm = { path = "../arc-vm" }
arc-mempool = { path = "../arc-mempool" }
arc-gpu = { path = "../arc-gpu" }
arc-consensus = { path = "../arc-consensus" }
arc-inference = { path = "../arc-inference", features = ["candle"] }
arc-net = { path = "../arc-net" }
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
hex.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
chrono.workspace = true
uuid.workspace = true
parking_lot.workspace = true
dashmap.workspace = true
clap.workspace = true
crossbeam.workspace = true
blake3.workspace = true
ed25519-dalek.workspace = true
k256.workspace = true
sha3.workspace = true
rayon.workspace = true
lz4_flex.workspace = true
reqwest.workspace = true
thiserror.workspace = true
toml.workspace = true
