[package]
name = "arc-olm"
version = "0.1.0"
edition = "2024"
description = "Ontological Language Model — deterministic reasoning via typed DAG search"
license = "MIT"

[dependencies]
arc-crypto = { path = "../arc-crypto" }
rayon = "1.10"
blake3 = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
