[package]
name = "arc-state"
description = "ARC Chain state management — accounts, balances, WAL persistence, snapshots"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
stwo-prover = ["arc-crypto/stwo-prover"]

[dependencies]
arc-crypto = { path = "../arc-crypto" }
arc-types = { path = "../arc-types" }
arc-gpu = { path = "../arc-gpu" }
serde.workspace = true
bincode.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
rayon.workspace = true
crossbeam.workspace = true
blake3.workspace = true
crc32fast.workspace = true
lz4_flex.workspace = true
thiserror.workspace = true
tracing.workspace = true
wasmer.workspace = true
ed25519-dalek.workspace = true
libc = "0.2"
